Fix language menu stretch.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5160,6 +5160,9 @@ select{
 .w-7{
 	width: 1.75rem;
 }
+.w-40{
+	width: 10rem;
+}
 .min-w-0{
 	min-width: 0px;
 }
